--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,6 @@
 .App {
+  position: relative;
   text-align: center;
   max-width: 1280px;
-  margin:0 auto;
-  overflow-x: hidden;
+  margin: 0 auto;
 }
