--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -1,231 +1,238 @@
 html {
-	scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
-
 
 .header {
-	position: sticky;
-	top: 2rem;
-	width: calc(100% - 4rem);
-	margin: 0 auto;
-	background: #ffff;
-	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-	z-index: 1000;
-	border-radius: 72px;
+  position: sticky;
+  top: 2rem;
+  width: calc(100% - 4rem);
+  margin: 0 auto;
+  background: #ffff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  border-radius: 72px;
 
+  .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 2rem;
+    position: relative;
+  }
 
+  .logo {
+    width: 129.69px !important ;
+    height: 30.43px !important;
+  }
 
-	.container {
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-		padding: 1rem 2rem;
-		position: relative;
-	}
+  .nav {
+    display: flex;
+    align-items: center;
+    width: 258px;
+    height: 21px;
+    gap: 24px;
 
+    .nav-link {
+      text-decoration: none;
+      color: #333;
+      font-family: Exo;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 21.26px;
+      transition: color 0.3s;
 
+      &.active {
+        color: #4451ca;
+        font-weight: bold;
+      }
 
-	.logo {
-		width: 129.69px;
-		height: 30.43px;
-	}
+      &:hover {
+        color: #007bff;
+      }
+    }
+  }
 
-	.nav {
-		display: flex;
-		align-items: center;
-		width: 258px;
-		height: 21px;
-		gap: 24px;
+  .header-buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 277px;
+    height: 48px;
+    gap: 23px;
 
-		.nav-link {
-			text-decoration: none;
-			color: #333;
-			font-family: Exo;
-			font-size: 16px;
-			font-weight: 400;
-			line-height: 21.26px;
-			transition: color 0.3s;
+    .btn {
+      padding: 0.5rem 1rem !important;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      transition: background 0.3s;
 
-			&.active {
-				color: #4451CA;
-				font-weight: bold;
-			}
+      &.login {
+        background: #4451ca !important;
+        color: #fff;
+        font-family: Lexend;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 20px;
 
-			&:hover {
-				color: #007bff;
-			}
-		}
-	}
+        &:hover {
+          background: #0056b3;
+        }
+      }
+    }
 
-	.header-buttons {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		width: 277px;
-		height: 48px;
-		gap: 23px;
+    .icon {
+      height: 24px;
+      width: 24px;
+      transition: opacity 0.3s;
 
-		.btn {
-			padding: 0.5rem 1rem;
-			border: none;
-			border-radius: 4px;
-			cursor: pointer;
-			transition: background 0.3s;
+      &:hover {
+        opacity: 0.7;
+      }
+    }
+  }
 
-			&.login {
-				background: #4451CA;
-				color: #fff;
-				font-family: Lexend;
-				font-size: 16px;
-				font-weight: 400;
-				line-height: 20px;
+  .mobile-view {
+    display: none;
+  }
 
-				&:hover {
-					background: #0056b3;
-				}
-			}
-		}
-
-		.icon {
-			height: 24px;
-			width: 24px;
-			transition: opacity 0.3s;
-
-			&:hover {
-				opacity: 0.7;
-			}
-		}
-	}
-
-	.mobile-view {
-		display: none;
-	}
-
-	.hamburger-icon {
-		display: none;
-		width: 24px;
-		height: 24px;
-		cursor: pointer;
-	}
+  .hamburger-icon {
+    display: none;
+    width: 24px;
+    height: 24px;
+    cursor: pointer;
+  }
 }
-
-
+.drawer {
+  display: flex;
+  flex-direction: column;
+  background-color: red;
+}
+.navlist {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 /*Media Query: Mobile view */
 @media (max-width: 639px) {
-	.header {
+  .nav-m {
+    display: none;
+  }
+  .navlist {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 40px;
+  }
+  .header {
+    .container {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 8px 16px;
+    }
 
-		.container {
-			display: flex;
-			justify-content: space-between;
-			align-items: center;
-			padding: 8px 16px;
-		}
+    .logo {
+      width: 72px;
+      height: 16.89px;
+    }
 
-		.logo {
-			width: 72px;
-			height: 16.89px;
-		}
+    .mobile-view {
+      display: none;
 
-		.mobile-view {
-			display: none;
+      &.open {
+        display: flex;
+        align-items: flex-start;
+        gap: 8px;
+        position: absolute;
+        top: 60px;
+        left: 50%;
+        transform: translateX(-50%);
+        border-radius: 8px;
+        background: #ffffff;
+        width: 80%;
+        padding: 1rem 2rem;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        flex-direction: column;
+        align-items: center;
+        gap: 16px;
+      }
+    }
 
-			&.open {
-				display: flex;
-				align-items: flex-start;
-				gap: 8px;
-				position: absolute;
-				top: 60px;
-				left: 50%;
-				transform: translateX(-50%);
-				border-radius: 8px;
-				background: #ffffff;
-				width: 80%;
-				padding: 1rem 2rem;
-				box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-				flex-direction: column;
-				align-items: center;
-				gap: 16px;
-			}
-		}
+    .nav {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      gap: 16px;
+    }
 
-		.nav {
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-			width: 100%;
-			gap: 16px;
-		}
+    .header-buttons {
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      justify-content: center;
+      width: 100%;
+      gap: 8px;
+      margin-top: 4rem;
+    }
 
-		.header-buttons {
-			display: flex;
-			flex-direction: row;
-			flex-wrap: wrap;
-			justify-content: center;
-			width: 100%;
-			gap: 8px;
-			margin-top: 4rem;
-		}
-
-		.hamburger-icon {
-			display: block;
-		}
-	}
+    .hamburger-icon {
+      display: block;
+    }
+  }
 }
-
 
 /* Media Query: TABLET */
 @media (min-width: 640px) and (max-width: 1024px) {
-	.header {
-		height: 60px;
-		top: 34px;
+  .header {
+    height: 60px;
+    top: 34px;
 
-		.container {
+    .container {
+      padding: 24px, 40px;
+    }
 
-			padding: 24px, 40px;
+    .logo {
+      width: 110px;
+      height: 25.81px;
+    }
 
+    .nav {
+      width: 226px;
+      height: 21px;
+      gap: 8px;
 
-		}
+      .nav-link {
+        font-size: 16px;
+      }
+    }
 
-		.logo {
-			width: 110px;
-			height: 25.81px;
-		}
+    .header-buttons {
+      width: 230px;
+      height: 36px;
+      gap: 16px;
 
-		.nav {
-			width: 226px;
-			height: 21px;
-			gap: 8px;
+      .btn {
+        padding: 8px 20px;
+      }
 
-			.nav-link {
-				font-size: 16px;
-			}
-		}
+      .icon {
+        width: 24px;
+        height: 24px;
+      }
+    }
 
-		.header-buttons {
+    .mobile-view {
+      display: none;
+    }
 
-			width: 230px;
-			height: 36px;
-			gap: 16px;
-
-			.btn {
-				padding: 8px 20px;
-			}
-
-			.icon {
-				width: 24px;
-				height: 24px;
-			}
-		}
-
-		.mobile-view {
-			display: none;
-		}
-
-		.hamburger-icon {
-			display: none;
-			width: 24px;
-			height: 24px;
-			cursor: pointer;
-		}
-	}
+    .hamburger-icon {
+      display: none;
+      width: 24px;
+      height: 24px;
+      cursor: pointer;
+    }
+  }
 }
